--- a/index.html
+++ b/index.html
@@ -51,9 +51,21 @@ wie JavaScript geändert werden kann.
 <h2>Js in Head</h2>
 <p id="newText">A paragraph</p>
 <button type="button" onclick="yourFunction()">Try it</button>
+<!-- übung innerHTML1 -->
+<p id="count"></p>
+<!-- Using document.write() -->
+<!-- JavaScript Statements -->
 
 
+<h2>JavaScript Statements</h2>
 
+<p>A <b>JavaScript program</b> is a list of <b>statements</b> to be executed by a computer.</p>
+<p id="statement"></p>
 <script src="assets/js/main.js"></script>
+
+
+
+
+<h1></h1>
 </body>
 </html>
