--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
+    <h4><a href="assets/html/uebung.html">uebungJS</a></h4>
     <!-- DOM Elements
         Eine Webseite ist ein Dokument. Dieses Dokument kann entweder im
 Browserfenster oder als HTML-Quelltext angezeigt werden. Aber in beiden
@@ -63,8 +64,9 @@ wie JavaScript geändert werden kann.
 <p id="statement"></p>
 <script src="assets/js/main.js"></script>
 
-
-
+<!--  button -->
+<input type="button" value="night" onclick="yourFunction()">
+<input type="button" value="day" onclick="MyFunction()">
 
 <h1></h1>
 </body>
